--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -834,124 +834,7 @@
     "# Indicate that Data Loading is complete \n",
     "print(\"-----------------------------\")\n",
     "print(\"Data Retrieval Complete      \")\n",
-    "print(\"-----------------------------\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Set the API base URL\n",
-    "#url = \"http://api.openweathermap.org/data/2.5/weather?\"\n",
-    "\n",
-    "# Define an empty list to fetch the weather data for each city\n",
-    "#city_data = []\n",
-    "\n",
-    "# Print to logger\n",
-    "#print(\"Beginning Data Retrieval     \")\n",
-    "#print(\"-----------------------------\")\n",
-    "\n",
-    "# Create counters\n",
-    "#record_count = 1\n",
-    "#set_count = 1\n",
-    "\n",
-    "# Loop through all the cities in our list to fetch weather data\n",
-    "#for i, city in enumerate(cities):\n",
-    "        \n",
-    "    # Group cities in sets of 50 for logging purposes\n",
-    "    #if (i % 50 == 0 and i >= 50):\n",
-    "        #set_count += 1\n",
-    "        #record_count = 0\n",
-    "\n",
-    "        # Create endpoint URL with each city\n",
-    "        #city_url = url + \"&q=\" + city\n",
-    "    \n",
-    "        # Log the url, record, and set numbers\n",
-    "        #print(\"Processing Record %s of Set %s | %s\" % (record_count, set_count, city))\n",
-    "\n",
-    "        # Add 1 to the record count\n",
-    "        #record_count += 1\n",
-    "\n",
-    "        # Run an API request for each of the cities\n",
-    "        #try:\n",
-    "            # Parse the JSON and retrieve data\n",
-    "            #city_weather = requests.get(city_url).json()\n",
-    "\n",
-    "            # Parse out latitude, longitude, max temp, humidity, cloudiness, wind speed, country, and date\n",
-    "            #city_lat = city_weather[\"coord\"][\"lat\"]\n",
-    "            #city_lng = city_weather[\"coord\"][\"lon\"]\n",
-    "            #city_max_temp = city_weather[\"main\"][\"temp_max\"]\n",
-    "            #city_humidity = city_weather[\"main\"][\"humidity\"]\n",
-    "            #city_clouds = city_weather[\"clouds\"][\"all\"]\n",
-    "            #city_wind = city_weather[\"wind\"][\"speed\"]\n",
-    "            #city_country = city_weather[\"sys\"][\"country\"]\n",
-    "            #city_date = city_weather[\"dt\"]\n",
-    "\n",
-    "            # Append the City information into city_data list\n",
-    "            #city_data.append({\"City\": city, \n",
-    "                          #\"Lat\": city_lat, \n",
-    "                          #\"Lng\": city_lng, \n",
-    "                          #\"Max Temp\": city_max_temp,\n",
-    "                          #\"Humidity\": city_humidity,\n",
-    "                          #\"Cloudiness\": city_clouds,\n",
-    "                          #\"Wind Speed\": city_wind,\n",
-    "                          #\"Country\": city_country,\n",
-    "                          #\"Date\": city_date})\n",
-    "\n",
-    "        # If an error is experienced, skip the city\n",
-    "        #except:\n",
-    "            #print(\"City not found. Skipping...\")\n",
-    "            #pass\n",
-    "                  \n",
-    "# Indicate that Data Loading is complete \n",
-    "#print(\"-----------------------------\")\n",
-    "#print(\"Data Retrieval Complete      \")\n",
-    "#print(\"-----------------------------\")    \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "    # Create endpoint URL with each city\n",
-    "    #city_url = f\"{url}appid={weather_api_key}&q={city}\"\n",
-    "    \n",
-    "    # Log the url, record, and set numbers\n",
-    "    #print(\"Processing Record %s of Set %s | %s\" % (record_count, set_count, city))\n",
-    "\n",
-    "    # Add 1 to the record count\n",
-    "    #record_count += 1\n",
-    "\n",
-    "    # Run an API request for each of the cities\n",
-    "    #try:\n",
-    "        # Parse the JSON and retrieve data\n",
-    "        #city_weather = requests.get(query_url).json()\n",
-    "\n",
-    "        # Parse out latitude, longitude, max temp, humidity, cloudiness, wind speed, country, and date\n",
-    "        #city_lat = [\"coord\"][\"lat\"]\n",
-    "        #city_lng = [\"coord\"][\"lon\"]\n",
-    "        #city_max_temp = [\"main\"][\"temp_max\"]\n",
-    "        #city_humidity = [\"main\"][\"humidity\"]\n",
-    "        #city_clouds = [\"clouds\"][\"all\"]\n",
-    "        #city_wind = [\"wind\"][\"speed\"]\n",
-    "        #city_country = [\"sys\"][\"country\"]\n",
-    "        #city_date = [\"dt\"]\n",
-    "\n",
-    "        # Append the City information into city_data list\n",
-    "        #city_data.append({\"City\": city, \n",
-    "                          #\"Lat\": city_lat, \n",
-    "                          #\"Lng\": city_lng, \n",
-    "                          #\"Max Temp\": city_max_temp,\n",
-    "                          #\"Humidity\": city_humidity,\n",
-    "                          #\"Cloudiness\": city_clouds,\n",
-    "                          #\"Wind Speed\": city_wind,\n",
-    "                          #\"Country\": city_country,\n",
-    "                          #\"Date\": city_date})\n",
-    "\n",
-    "    # If an error is experienced, skip the city\n",
-    "    #except:\n",
-    "        #print(\"City not found. Skipping...\")\n",
-    "        #pass\n",
-    "              \n",
-    "# Indicate that Data Loading is complete \n",
-    "#print(\"-----------------------------\")\n",
-    "#print(\"Data Retrieval Complete      \")\n",
-    "#print(\"-----------------------------\")"
+    "print(\"-----------------------------\")"
    ]
   },
   {
@@ -1858,7 +1741,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:** The latitude and maximum temperature strongly correlate negatively with an increasing latitude, as can be seen on the graph displaying latitude and maximum temperature for cities in the northern hemisphere. This makes sense as temperatures will decrease the further up north one moves from the Equator. The relationship between the latitude and the maximum temperature in the southern hemisphere are loosely positively correlated. The further one moves towards the equator, the more temperatures will increase however the correlation in the southern hemisphere is not as large as in the northern hemisphere. This could possibly be due to the fact that there are less cities and largely populated cities in the southern hemisphere in comparison to the northern hemisphere. Also, the majority of land masses in the southern hemisphere are closer to the Equator and not as distributed as in the northern hemisphere. Therefore, cities will be more likely to have warmer temperatures in the southern hemisphere, which can skew the correlation. "
+    "**Discussion about the linear relationship:** The latitude and maximum temperature strongly correlate negatively with an increasing latitude, as can be seen on the graph displaying latitude and maximum temperature for cities in the northern hemisphere. This makes sense as temperatures will decrease the further up north one moves from the Equator. The relationship between the latitude and the maximum temperature in the southern hemisphere are loosely positively correlated. The further one moves towards the equator, the more temperatures will increase. However the correlation in the southern hemisphere is not as large as in the northern hemisphere. This could possibly be due to the fact that there are less cities and largely populated areas in the southern hemisphere in comparison to the northern hemisphere. Also, the majority of land masses in the southern hemisphere are closer to the Equator and not as distributed as in the northern hemisphere. Therefore, cities will be more likely to have warmer temperatures in the southern hemisphere, which can skew the correlation. "
    ]
   },
   {
@@ -1968,7 +1851,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:** The relationship between humidity and latitude is not strongly correlated in the northern or southern hemisphere. Both graphs show a slight positive correlation, meaning that humidity would increase when moving from the South Pole towards the Equator but also increase as one moves away from the Equator towards the North Pole. Based on the small r-value of both graphs, one can conlcude that latitude and humidity are not strongly correlated. "
+    "**Discussion about the linear relationship:** The relationship between humidity and latitude is not strongly correlated in the northern or southern hemisphere. Both graphs show a slight positive correlation, meaning that humidity would increase when moving from the South Pole towards the Equator but also increase as one moves away from the Equator towards the North Pole. Based on the small r-value of both graphs, one can conclude that latitude and humidity are not strongly correlated. "
    ]
   },
   {
